--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Hola Mundo</h1>
+<!-- <h1>Hola Mundo</h1>
 <hr>
 <h3>Inicios de Angular</h3>
 <h3>{{title}}</h3>
@@ -7,4 +7,5 @@
 <hr>
 <app-heroe></app-heroe>
 <hr> 
-<app-lista></app-lista>
+<app-lista></app-lista> -->
+<app-dbz-main-page></app-dbz-main-page>
